--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.0.12.Final</version>
+		</dependency>
+		<dependency>
 		    <groupId>jstl</groupId>
 		    <artifactId>jstl</artifactId>
 		    <version>${com.important.jstl}</version>
