--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,39 @@
 		<com.important.mysql>5.1.46</com.important.mysql>
 		<com.important.springweb>4.3.18.RELEASE</com.important.springweb>
 		<com.important.springwebmvc>4.3.18.RELEASE</com.important.springwebmvc>
+		
+		<com.important.jackson>2.9.6</com.important.jackson>
+		<com.important.hibernate>6.0.12.Final</com.important.hibernate>
+		<com.important.file>1.3.3</com.important.file>
 	</properties>
 
 	<dependencies>
 		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>${com.important.file}</version>
+		</dependency>
+		<!-- 解析处理json -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>${com.important.jackson}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${com.important.jackson}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${com.important.jackson}</version>
+		</dependency>
+		<!-- JSR303访问 -->
+		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-validator</artifactId>
-		    <version>6.0.12.Final</version>
+		    <version>${com.important.hibernate}</version>
 		</dependency>
 		<dependency>
 		    <groupId>jstl</groupId>
